--- a/Módulo 3/Exercícios/ex022/fundo006.html
+++ b/Módulo 3/Exercícios/ex022/fundo006.html
@@ -21,6 +21,12 @@
             margin: auto;
             border: 2px solid black;
             border-radius: 15px;
+            padding: 0px 10px 0px 10px;
+        }
+
+        main p {
+            text-align: justify;
+            padding: 2px;
         }
     </style>
 </head>
