--- a/Módulo 3/Exercícios/ex022/fundo006.html
+++ b/Módulo 3/Exercícios/ex022/fundo006.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed; 
             background-size: cover;
+
+            /* Shorthand - backgorund
+            color > image > position > repeat > [size] > attachment 
+             */
+
         }
 
         main {
@@ -35,6 +37,24 @@
         <h1>
             Teste de Imagem de Fundo
         </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
+        </p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptas quod deleniti aspernatur, aut adipisci eaque nobis temporibus, voluptatum laboriosam excepturi eveniet, vitae aliquid eligendi earum provident labore incidunt quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore vel praesentium quas cum beatae, iusto non, omnis quis sequi ullam harum eligendi repellendus odit similique ipsum. Incidunt quae reiciendis eius! Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum in. Illo quam obcaecati tenetur praesentium nostrum, nesciunt, illum deleniti id qui saepe consequuntur dolorem iusto, eius reprehenderit aperiam sunt?
         </p>
