--- a/Módulo 3/Desafios/d011/index.html
+++ b/Módulo 3/Desafios/d011/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Desafio do Astronauta</title>
+    <style>
+        body {
+            height: 98vh;
+            background-color: black;
+            background-image: url(imagens/espaco.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        #astronauta {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="astronauta">
+        <img src="imagens/astronauta.png" alt="">
+    </div>
 </body>
 </html>
