--- a/Módulo 3/Exercícios/ex022/fundo001.html
+++ b/Módulo 3/Exercícios/ex022/fundo001.html
@@ -6,15 +6,16 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body {
-            background-image: url(imagens/wallpaper002.jpg);
+            background-image: url(imagens/wallpaper001.jpg);
+            text-align: center;
         }
 
         div.quadrado {
             display: inline-block;
-            border: 2px solid black;
+            border: 3px solid black;
             border-radius: 10px;
             background-color: lightgray;
-            width: 300px;
+            width: 300px; 
             height: 300px;
         }
 
