--- a/Módulo 3/Exercícios/ex022/fundo002.html
+++ b/Módulo 3/Exercícios/ex022/fundo002.html
@@ -6,12 +6,12 @@
     <title>Personalização dos Fundos</title>
     <style>
         body {
-            background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
+            background-image: url(imagens/pattern001.png);
             background-size: 100px 100px;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
         }
     </style>
 </head>
-<body>
+<body>    
 </body>
 </html>
