--- a/Módulo 3/Desafios/d012/index.html
+++ b/Módulo 3/Desafios/d012/index.html
@@ -24,16 +24,17 @@
     Só se fala por e-mail
     Mensagem curta e fria
     Twitter e Facebook
-    Antes que eu duque
+    Antes que eu caduque
     Vou dizer tudo em poesia.
-    <div class="img" id="fundo01">
-    <p>Não é mais como era antes
+    <div id="fundo01" class="img-config">
+    <div class="text-img">Não é mais como era antes
 É tudo abreviado
 "Você" só tem duas letras
 O "O" e o "E" foi riscado
 Para declarar o amor
 Basta botar uma flor
-E um coração desenhado.</p>
+E um coração desenhado.
+</div>
     </div>
     Arroba agora não pesa
     É parte de um endereço
@@ -50,17 +51,16 @@ E um coração desenhado.</p>
     Um beijo significa
     Pra entender como fica
     Decifre esse rabisco.
-    
-    <div class="img" id="fundo02">
-    <p>Tenho saudade das cartas
+    <div id="fundo02" class="img-config">
+    <div class="text-img">Tenho saudade das cartas
 Escritas com a própria mão
 Mandava no mês de Junho
 Só chegava no Verão
 Mas matava a saudade
 Era texto de verdade
-Nas linhas do coração.</p>
+Nas linhas do coração.
+</div>
     </div>
-    
     Agora, escrevo e envio
     Chegando na mesma hora
     Mas quando vou prosear
