--- a/Módulo 4/Exercícios/ex024/iframe002.html
+++ b/Módulo 4/Exercícios/ex024/iframe002.html
@@ -25,7 +25,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam omnis, earum ab vitae rerum explicabo quos illo sunt nam ipsa maiores voluptate cum mollitia nesciunt quod dolore quibusdam vel voluptatem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit similique at voluptatum blanditiis aut vero, vel veniam nesciunt eius nobis fugiat explicabo consequatur fuga itaque enim sequi repellendus quisquam minus.
     </p>
 
-    <iframe src="pag001.html" frameborder="0">
+    <iframe src="paginas-extras/pag001.html" frameborder="0">
         <p>
             Infelizmente o seu navegador não é compatível com isso!
         </p>
