--- a/Módulo 4/Exercícios/ex024/paginas-extras/pag001.html
+++ b/Módulo 4/Exercícios/ex024/paginas-extras/pag001.html
@@ -25,8 +25,8 @@
             padding: 10px;
         }
 
-        tr:nth-child(even) {
-            background-color: rgba(228, 228, 228);
+        tr:nth-child(odd) {
+            background-color: white;
         }
     </style>
 </head>
