--- a/Módulo 4/Desafios/d015/index.html
+++ b/Módulo 4/Desafios/d015/index.html
@@ -6,7 +6,47 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
     <title>Projeto Redes Sociais</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-home.html" target="frame">
+            <img src="imagens/logo-home.jpg" alt="">
+        </a>
+    </div>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-youtube.html" target="frame">
+            <img src="imagens/logo-youtube.jpg" alt="">
+        </a>
+    </div>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-github.html" target="frame">
+            <img src="imagens/logo-github.jpg" alt="">
+        </a>
+    </div>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-instagram.html" target="frame">
+            <img src="imagens/logo-instagram.jpg" alt="">
+        </a>
+    </div>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-twitter.html" target="frame">
+            <img src="imagens/logo-twitter.jpg" alt="">
+        </a>
+    </div>
+    <div class="logo-app">
+        <a href="paginas-phone/pag-facebook.html" target="frame">
+            <img src="imagens/logo-facebook.jpg" alt="">
+        </a>
+    </div>
+    <div class="phone">
+        <img src="imagens/frame-iphone.png" alt="">
+    </div>
+    <iframe src="paginas-phone/pag-home.html" name="frame" scrolling="yes">
+        <p>
+            Seu navegador não é compatível com iframes
+        </p>
+    </iframe>
 </body>
 </html>
