aprendendo a usar formulários

--- a/Módulo 4/Exercícios/ex025/form001.html
+++ b/Módulo 4/Exercícios/ex025/form001.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <h1>
-        Meu primeiro formulário
+        Meu Primeiro formulário
     </h1>
-    <form action="cadastro.php" autocomplete="off">
+    <form action="cadastro.php" autocomplete="off">    
         <p>
             <label for="inome">
                 Nome:
@@ -25,11 +25,12 @@
             <label for="isobrenome">
                 Sobrenome:
             </label>
-            <input type="text" name="isobrenome" id="isobrenome">
+            <input type="text" name="sobrenome" id="isobrenome">
         </p>
         <p>
             <input type="submit" value="Enviar">
         </p>
     </form>
+    
 </body>
 </html>
