Exercício 2 de formulário

--- a/Módulo 4/Exercícios/ex025/form001.html
+++ b/Módulo 4/Exercícios/ex025/form001.html
@@ -14,7 +14,7 @@
     <h1>
         Meu Primeiro formulário
     </h1>
-    <form action="cadastro.php" autocomplete="off">    
+    <form action="cadastro.php" autocomplete="off" method="post">    
         <p>
             <label for="inome">
                 Nome:
