--- a/Módulo 4/Exercícios/ex026/mq005/index.html
+++ b/Módulo 4/Exercícios/ex026/mq005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,6 +31,14 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias dignissimos labore ipsa repudiandae deleniti veritatis harum sint doloremque, blanditiis quos maiores ipsum eum veniam. Cumque fugit officia est consectetur dolores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit quaerat nulla iure optio, voluptas corrupti magni incidunt earum, consectetur, necessitatibus voluptatum reprehenderit maxime minus distinctio inventore. Dolore vitae assumenda ab.</p>
         </article>
     </main>
-    
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
