--- a/Módulo 4/Desafios/d016/index.html
+++ b/Módulo 4/Desafios/d016/index.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-
+                <!-- <img src="imagens/metal.jpg" alt=""> -->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post">
+                    <div class="login">
+                        <label for="iuser"><span class="material-symbols-outlined">person</span></label>
+                        <input type="email" name="user" id="iuser">
+                    </div>
 
+                    <div class="login">
+                        <label for="isenha"><span class="material-symbols-outlined">vpn_key</span></label>
+                        <input type="password" name="senha" id="isenha">
+                    </div>
                 </form>
             </div>
         </section>
