--- a/Módulo 4/Desafios/d016/index.html
+++ b/Módulo 4/Desafios/d016/index.html
@@ -12,21 +12,17 @@
     <main>
         <section id="login">
             <div id="imagem">
-                <!-- <img src="imagens/metal.jpg" alt=""> -->
+                <!-- Aqui vai a imaagem CSS -->
             </div>
             <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <h1>
+                    Login
+                </h1>
+                <p>
+                    Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
+                </p>
                 <form action="login.php" method="post">
-                    <div class="login">
-                        <label for="iuser"><span class="material-symbols-outlined">person</span></label>
-                        <input type="email" name="user" id="iuser">
-                    </div>
 
-                    <div class="login">
-                        <label for="isenha"><span class="material-symbols-outlined">vpn_key</span></label>
-                        <input type="password" name="senha" id="isenha">
-                    </div>
                 </form>
             </div>
         </section>
@@ -34,3 +30,6 @@
     
 </body>
 </html>
+
+<!-- <span class="material-symbols-outlined">person</span>
+<span class="material-symbols-outlined">vpn_key</span> -->
