--- a/Módulo 4/Desafios/d016/index.html
+++ b/Módulo 4/Desafios/d016/index.html
@@ -22,8 +22,19 @@
                 <p>
                     Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.
                 </p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="email" id="iemail" placeholder="Seu Email" autocomplete="email" required maxlength="30">
+                        <label for="iemail">Email</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua Senha" autocomplete="current-password" required minlength="8" maxlength="20"> 
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a Senha <span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
@@ -31,6 +42,3 @@
     
 </body>
 </html>
-
-<!-- <span class="material-symbols-outlined">person</span>
-<span class="material-symbols-outlined">vpn_key</span> -->
